<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="Digital_Input" Id="{87e23858-b60c-403c-8145-ee38fe68cdc1}">
    <Declaration><![CDATA[{attribute 'Tc2GvlVarNames'}
{attribute 'strict'}
{attribute 'to_String'}

TYPE Digital_Input :
(
		eX10000_Stn01_03UltrasonicGeneratorMcb_Trip               			 	   :=1,  
		eX10001_Stn01UltrasonicGeneratorLeftRight_Alarm   	                       :=2,  
		eX10002_Stn01UltrasonicGeneratorBottom_Alarm                               :=3,  
		eX10003_Stn02UltrasonicGeneratorLeftRight_Alarm                            :=4,  
		eX10004_Stn02UltrasonicGeneratorBottom_Alarm                               :=5,  
		eX10005_Stn03UltrasonicGeneratorLeftRight_Alarm                            :=6,  
		eX10006_Stn03UltrasonicGeneratorBottom_Alarm                               :=7,  
		eX10007_Stn04_05UltrasonicGeneratorMcb_Trip                                :=8,  
		eX10008_Stn04UltrasonicGeneratorLeftRight_Alarm                            :=9,  
		eX10009_Stn04UltrasonicGeneratorBottom_Alarm                               :=10, 
		eX10010_Stn05UltrasonicGeneratorBottom_Alarm                               :=11, 
		eX10011_GeneralMainPanelPb_E_Stop                                          :=12, 
		eX10012_OperatorPullString_E_Stop                                          :=13, 
		eX10013_MaintenancePullString_E_Stop                                       :=14, 
		eX10014_GeneralTouchMonitorSocketElcb_Trip                                 :=15, 
		eX10015_Arm01ServoDriveMcb_Trip                                            :=16, 
		                                                                                 
		eX10100_IpcDcOnSignal                                                      :=17, 
		eX10101_PanelVentilationFanMcb_Trip                                        :=18, 
		eX10102_PanelLightingMcb_Trip                                              :=19, 
		eX10103_MachineLighting01Mcb_Trip                                          :=20, 
		eX10104_MachineLighting02Mcb_Trip                                          :=21, 
		eX10105_GeneralTouchMonitorSocketMcb_Trip                                  :=22, 
		eX10106_GeneralPhaseSequenceRelayMcb_Trip                                  :=23, 
		eX10107_GeneralPhaseSequenceRelay_Trip                                     :=24, 
		eX10108_Stn06ProcessTankBlowerMms_Tor_Trip                                 :=25, 
		eX10109_Stn01_06ExhaustBlowerMms_Tor_Trip                                  :=26, 
		eX10110_Stn01_05AgitationMotorMms_Tor_Trip                                 :=27, 
		eX10111_Stn01DosingPumpMcb_Trip                                            :=28, 
		eX10112_Stn02DosingPumpMcb_Trip                                            :=29, 
		eX10113_Stn03DosingPumpMcb_Trip                                            :=30, 
		eX10114_Stn04DosingPumpMcb_Trip                                            :=31, 
		eX10115_Stn01DosingChemicalContainerRelaySignal_Feedback                   :=32, 
		                                                                                 
		eX10200_Stn01ProcessTankPumpMms_Tor_Trip                                   :=33, 
		eX10201_Stn02ProcessTankPumpMms_Tor_Trip                                   :=34, 
		eX10202_Stn03ProcessTankPumpMms_Tor_Trip                                   :=35, 
		eX10203_Stn04ProcessTankPumpMms_Tor_Trip                                   :=36, 
		eX10204_Stn05ProcessTankPumpMms_Tor_Trip                                   :=37, 
		eX10205_Stn01_04ChemicalReturnTankPumpMms_Tor_Trip                         :=38, 
		eX10206_Stn06ProcessTankVacuumPumpMms_Tor_Trip                             :=39, 
		eX10207_Stn01ProcessTankHeaterMcb_Trip                                     :=40, 
		eX10208_Stn02ProcessTankHeaterMcb_Trip                                     :=41, 
		eX10209_Stn03ProcessTankHeaterMcb_Trip                                     :=42, 
		eX10210_Stn04ProcessTankHeaterMcb_Trip                                     :=43, 
		eX10211_Stn06ProcessTankHeaterMcb_Trip                                     :=44, 
		eX10212_LoadingConveyor1Mcb_Trip                                           :=45, 
		eX10213_LoadingConveyor2Mcb_Trip                                           :=46, 
		eX10214_LoadingConveyor3Mcb_Trip                                           :=47, 
		eX10215_Stn02DosingChemicalContainerRelaySignal_Feedback                   :=48, 
		                                                                                 
		eX10300_MainSafetyContactor1_Feedback                                      :=49, 
		eX10301_MainSafetyContactor2_Feedback                                      :=50, 
		eX10302_DoorSafetyContactor1_Feedback                                      :=51, 
		eX10303_DoorSafetyContactor2_Feedback                                      :=52, 
		eX10304_Module01AdditionalPowerSupplyIncomingPowerMcb_Trip                 :=53, 
		eX10305_Module01AdditionalPowerSupplyOutgoingPowerMcb_Trip                 :=54, 
		eX10306_Module02AdditionalPowerSupplyIncomingPowerMcb_Trip                 :=55, 
		eX10307_Module02AdditionalPowerSupplyOutgoingPowerMcb_Trip                 :=56, 
		eX10308_Module03AdditionalPowerSupplyIncomingPowerMcb_Trip                 :=57, 
		eX10309_Module03AdditionalPowerSupplyOutgoingPowerMcb_Trip         		   :=58, 
		eX10310_Arm01AdditionalPowerSupplyIncomingPowerMcb_Trip                    :=59, 
		eX10311_Arm01AdditionalPowerSupplyOutgoingPowerMcb_Trip                    :=60, 
		eX10312_Stn05_06FfuUnitMcb_Trip                                            :=61, 
		eX10313_UnloadingFfuUnitMcb_Trip                                           :=62, 
		eX10314_Reserved                                                           :=63, 
		eX10315_Reserved                                                           :=64, 
		                                                                                 
		eX10400_GeneralAlarmPb_Reset                                               :=65, 
		eX10401_GeneralBuzzerPb_Reset                                              :=66, 
		eX10402_Stn01ProcessTankSensor_MaxOverflow                                 :=67, 
		eX10403_Stn01ProcessTankSensor_MinOverflow                                 :=68, 
		eX10404_Stn01ProcessTankSensor_Min                                         :=69, 
		eX10405_Stn02ProcessTankSensor_MaxOverflow                                 :=70, 
		eX10406_Stn02ProcessTankSensor_MinOverflow                                 :=71, 
		eX10407_Stn02ProcessTankSensor_Min                                         :=72, 
		eX10408_Stn01DosingChemicalContainerSensor_WarningLevel                    :=73, 
		eX10409_Stn01DosingChemicalContainerSensor_MinLevel                        :=74, 
		eX10410_Structure01DripPanSensor_Leak                                      :=75, 
		eX10411_Stn02DosingChemicalContainerSensor_WarningLevel                    :=76, 
		eX10412_Stn02DosingChemicalContainerSensor_MinLevel                        :=77, 
		eX10413_Arm01HorizontalSensor_LoadingOt                                    :=78, 
		eX10414_Arm01HorizontalSensor_Home                                         :=79, 
		eX10415_GeneralSafetyCurtainSensor_Alarm                                   :=80, 
		                                                                                 
		eX11000_Arm01VerticalSensor_TopOt                                          :=81, 
		eX11001_Arm01VerticalSensor_Home                                           :=82, 
		eX11002_Arm01VerticalSensor_BtmOt                                          :=83, 
		eX11003_Arm01VerticalSensor_Crash                                          :=84, 
		eX11004_Arm01SensorA_Misshook                                              :=85, 
		eX11005_Arm01SensorB_Misshook                                              :=86, 
		eX11006_Stn03ProcessTankSensor_MaxOverflow                                 :=87, 
		eX11007_Stn03ProcessTankSensor_MinOverflow                                 :=88, 
		eX11008_Stn03ProcessTankSensor_Min                                         :=89, 
		eX11009_Stn04ProcessTankSensor_MaxOverflow                                 :=90, 
		eX11010_Stn04ProcessTankSensor_Min                                         :=91, 
		eX11011_Structure02DripPanSensor_Leak                                      :=92, 
		eX11012_Stn03DosingChemicalContainerSensor_WarningLevel                    :=93, 
		eX11013_Stn03DosingChemicalContainerSensor_MinLevel                        :=94, 
		eX11014_Stn04DosingChemicalContainerSensor_WarningLevel                    :=95, 
		eX11015_Stn04DosingChemicalContainerSensor_MinLevel                        :=96, 
		                                                                                 
		eX11100_Stn03DosingChemicalContainerRelaySignal_Feedback                   :=97, 
		eX11101_Stn04DosingChemicalContainerRelaySignal_Feedback                   :=98, 
		eX11102_Stn04ProcessTankSensor_MinOverflow                                 :=99, 
		eX11103_Reserved                                                           :=100,
		eX11104_Reserved                                                           :=101,
		eX11105_Reserved                                                           :=102,
		eX11106_Reserved                                                           :=103,
		eX11107_Reserved                                                           :=104,
		eX11108_Reserved                                                           :=105,
		eX11109_Reserved                                                           :=106,
		eX11110_Reserved                                                           :=107,
		eX11111_Reserved                                                           :=108,
		eX11112_Reserved                                                           :=109,
		eX11113_Reserved                                                           :=110,
		eX11114_Reserved                                                           :=111,
		eX11115_Reserved                                                           :=112,
		                                                                                 
		eX12000_Stn05ProcessTankSensor_MaxOverflow                                 :=113,
		eX12001_Stn05ProcessTankSensor_Min                                         :=114,
		eX12002_Stn01_04ChemicalReturnTankSensor_Max                               :=115,
		eX12003_Stn01_04ChemicalReturnTankSensor_Reg                               :=116,
		eX12004_Stn01_04ChemicalReturnTankSensor_Min                               :=117,
		eX12005_Stn05ProcessTankFlowSensor_MinFlow                                 :=118,
		eX12006_Stn06ProcessTankHeaterThermostat_Alarm                             :=119,
		eX12007_Stn06SlidingDoorRs_Open                                            :=120,
		eX12008_Stn06SlidingDoorRs_Close                                           :=121,
		eX12009_Structure03DripPanSensor_Leak                                      :=122,
		eX12010_GeneralIncomingCdaPressureSwitch_MinPressure                       :=123,
		eX12011_UnloadingSensor_BasketDetection                                    :=124,
		eX12012_Arm01HorizontalSensor_UnloadingOt                                  :=125,
		eX12013_Reserved                                                           :=126,
		eX12014_Reserved                                                           :=127,
		eX12015_Reserved                                                           :=128,
		                                                                                 
		eX12100_Stn06SlidingDoorRs01_Clamp                                         :=129,
		eX12101_Stn06SlidingDoorRs01_Unclamp                                       :=130,
		eX12102_Stn06SlidingDoorRs02_Clamp                                         :=131,
		eX12103_Stn06SlidingDoorRs02_Unclamp                                       :=132,
		eX12104_Reserved                                                           :=133,
		eX12105_Reserved                                                           :=134,
		eX12106_Reserved                                                           :=135,
		eX12107_Reserved                                                           :=136,
		eX12108_Reserved                                                           :=137,
		eX12109_Reserved                                                           :=138,
		eX12110_Reserved                                                           :=139,
		eX12111_Reserved                                                           :=140,
		eX12112_Reserved                                                           :=141,
		eX12113_Reserved                                                           :=142,
		eX12114_Reserved                                                           :=143,
		eX12115_Reserved                                                           :=144,
		                                                                                 
		eX13000_LoadingConveyorSensor_Feed                                         :=145,
		eX13001_LoadingConveyorSensor_Index                                        :=146,
		eX13002_LoadingConveyorSensor_Pick                                         :=147,
		eX13003_GeneralLoadingPb_E_Stop                                            :=148,
		eX13004_Reserved                                                           :=149,
		eX13005_Reserved                                                           :=150,
		eX13006_Reserved                                                           :=151,
		eX13007_Reserved                                                           :=152,
		eX13008_Reserved                                                           :=153,
		eX13009_Reserved                                                           :=154,
		eX13010_Reserved                                                           :=155,
		eX13011_Reserved                                                           :=156,
		eX13012_Reserved                                                           :=157,
		eX13013_Reserved                                                           :=158,
		eX13014_Reserved                                                           :=159,
		eX13015_Reserved                                                           :=160
                                                                    	                                                                    
   );
END_TYPE 	

]]></Declaration>
  </DUT>
</TcPlcObject>